project url updated

--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
         						<img class="img-fluid" src="img/gallery/bday-wisher.jpg" alt="">
         						<a class="light" href="img/gallery/bday-wisher.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
-        					<div class="g_item_text">
+							<a href="https://github.com/rrana5112/Bday_wisher-/tree/main"><div class="g_item_text">
         						<h4>Birthday Wisher</h4>
         						<p>Project for wishing happy bday to my friends on their bday</p>
-        					</div>
+							</div></a>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
