Adding circle project URL

--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
         						<img class="img-fluid" src="img/gallery/social.jpg" alt="">
         						<a class="light" href="img/gallery/social.jpg"><img src="img/gallery/icon.png" alt=""></a>
         					</div>
-        					<div class="g_item_text">
+        					<a href="https://github.com/rrana5112/social_circle"><div class="g_item_text">
         						<h4>Circle</h4>
         						<p>Social Media website for interacting with friends.</p>
-        					</div>
+        					</div></a>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul creative">
